--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="utils/countOccurence.js"></script>
         <script src="utils/crypt.js"></script>
         <script src="app.js"></script>
+        <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
         <div id="app"></div>
